--- a/config.yaml
+++ b/config.yaml
@@ -12,12 +12,21 @@ dynamicRedirects:
     from: /grey/*
     to: /gray/:splat
     statusCode: 200
+  -
+    from: /grey
+    to: /gray
+    statusCode: 200
+
   # This is a custom redirect because the status code is 3xx.
 staticRedirects:
   -
     from: /grey-redirect
     to: /gray
     statusCode: 308
+  - 
+    from: /blu
+    to: /blue
+    statusCode: 301
 # adds authentication to your site. Commented out as a policy with the name auth02 must exist
 # authentication:
 #   policyName: auth02
