--- a/config.yaml
+++ b/config.yaml
@@ -12,6 +12,14 @@ dynamicRedirects:
     from: /grey/*
     to: /gray/:splat
     status: 200
+  -
+    from: /grey
+    to: /gray
+    status: 200
+  -
+    from: /reddd
+    to: /red
+    status: 200
 
   # This is a custom redirect because the status code is 3xx.
 staticRedirects:
@@ -24,8 +32,8 @@ staticRedirects:
     to: /blue
     status: 301
 # adds authentication to your site. Commented out as a policy with the name auth02 must exist
-# authentication:
-#   policyName: auth02
-#   includePaths:
-#     - /red # red is locked down
+authentication:
+  policyName: oidc-test-1
+  includePaths:
+    - /red # red is locked down
 
